# find-my-bike

./: .gitmodules  pyproject.toml  start_label_studio.sh
.dvc/: config
aws/: template.yaml
aws/app/: app.py
aws/events/: event.json
classify-my-bike/: README.md
classify-my-bike/app/: requirements.txt
data/: .gitignore  ebay_train.dvc  ebay_val.dvc
find_my_bike/: fetch_ebay_data.py  fetch_ebay_prediction_data.py  fetch_ebay_training_data.py  fetch_ebay_val_data.py  predict.py  train_ebay.py
find_my_bike/config/: ebay_data.yaml  ebay_prediction_data.yaml  ebay_training_data.yaml  ebay_val_data.yaml  predict.yaml  reset_tasks.yaml  train_ebay.yaml
find_my_bike/dataset/: __init__.py  add_aspect.py  annotation.ipynb  annotation_converter.py  data_mutex.py  dataset_status.ipynb  image_dataset.py  ls2meta.py  meta2ls.py  prediction_dataset.py  reset_tasks.py  transforms.py  utils.py
find_my_bike/lightning/: __init__.py  bike_classifier.py  utils.py
find_my_bike/scrape/: __init__.py  ebay.py
label_studio_backend/: _wsgi.py  annotation.py
tests/: test_find_my_bike.py
tests/dataset/: assets.py  conftest.py  test_add_aspect.py  test_image_dataset.py  test_prediction_dataset.py  test_utils.py
tests/lightning/: test_bike_classifier.py  test_utils.py
tests/scrape/: test_ebay.py  test_image_dataset.py
