[tool.poetry]
name = "find-my-bike"
version = "0.1.0"
description = ""
authors = ["Tilman Krokotsch <t.krokotsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.1"
webdriver-manager = "^3.5.2"
pytorch-lightning = "^1.5.9"
tqdm = "^4.62.3"
hydra-core = "^1.1.1"
torchvision = "^0.11.3"
label-studio-sdk = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
responses = "^0.18.0"
black = {extras = ["d"], version = "^22.1.0"}
label-studio = "^1.4"
label-studio-ml = {git = "https://github.com/heartexlabs/label-studio-ml-backend"}
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
dvc = {extras = ["gdrive"], version = "^2.9.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
