[tool.poetry]
name = "find-my-bike"
version = "0.1.0"
description = ""
authors = ["Tilman Krokotsch <t.krokotsch@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
torchvision = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
responses = "^0.18.0"
label-studio = "^1.4"
label-studio-ml = {git = "https://github.com/heartexlabs/label-studio-ml-backend"}
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
dvc = {extras = ["gdrive"], version = "^2.9.3"}
hydra-core = "^1.1.1"
label-studio-sdk = "^0.0.9"
tqdm = "^4.62.3"
pytorch-lightning = "^1.6.0"
scrape-my-bike = {path = "./scrape-my-bike", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
